pagina de portada finalizada

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/router": "^0.2.0",
     "angular": "^1.5.6",
+    "angular-sanitize": "^1.5.6",
     "lite-server": "^2.2.0"
   },
   "devDependencies": {
