--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@angular/router": "^0.2.0",
     "angular": "^1.5.6",
     "angular-sanitize": "^1.5.6",
-    "lite-server": "^2.2.0"
+    "lite-server": "^2.2.0",
+    "ng-haversine": "0.0.1"
   },
   "devDependencies": {
     "concurrently": "^2.1.0",
